--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -142,7 +142,7 @@
         <!--Hello, <strong>tao!</strong>-->
     <!--</div>-->
 <!--</div>-->
-<div id="mask" class="mask">哈哈哈</div>
+<div id="mask" class="mask"></div>
 <div class="container">
     <div class="row clearfix">
         <div class="col-md-12 column">
