--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -114,35 +114,18 @@
                 addInput: function(){
                     var globleId = vm.globleId+1;
                     var div = "div"+globleId;
-                    $("#baseDiv").append("<div onclick=\"deleInput(this)\" id="+div+">\n" +
+                    $("#baseDiv").append("<div id="+div+"  ms-controller=\"aa\">\n" +
                 "                            <label>Page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>\n" +
                 "                            <input ms-duplex=\"@url\"    type=\"url\" class=\"form-control\"  style=\"width: 455px\"/><br>\n" +
                 "                            <label>saleXpath&nbsp;</label>\n" +
                 "                            <input ms-duplex=\"@saleXpath\"    type=\"url\" class=\"form-control\"  style=\"width: 750px\"/><br>\n" +
                 "                            <label>listXpath&nbsp;&nbsp;</label>\n" +
                 "                            <input ms-duplex=\"@listXpath\"    type=\"url\" class=\"form-control\"  style=\"width: 750px\"/>\n" +
-                "                            <button type=\"button\" class=\"btn btn-danger\" style=\"margin: 10px;\" >X</button>\n" +
+                "                            <button type=\"button\" class=\"btn btn-danger\" style=\"margin: 10px;\" onclick=\"deleInput(this)\" id="+div+">X</button>\n" +
                 "                    </div>");
-
-
-                <!--$("#baseDiv").append("<div id = "+div+"\n" +-->
-                <!--"                    <div>\n" +-->
-                <!--"                        <label>Page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>\n" +-->
-                <!--"                        <input ms-duplex=\"@url\"    type=\"url\" class=\"form-control\"  style=\"width: 455px\"/>\n" +-->
-                <!--"                    </div>\n" +-->
-                <!--"                    <div>\n" +-->
-                <!--"                        <label>saleXpath&nbsp;</label>\n" +-->
-                <!--"                        <input ms-duplex=\"@saleXpath\"    type=\"url\" class=\"form-control\"  style=\"width: 750px\"/>\n" +-->
-                <!--"                    </div>\n" +-->
-                <!--"                    <div>\n" +-->
-                <!--"                        <label>listXpath&nbsp;&nbsp;</label>\n" +-->
-                <!--"                        <input ms-duplex=\"@listXpath\"    type=\"url\" class=\"form-control\"  style=\"width: 750px\"/>\n" +-->
-                <!--"                        <button type=\"button\" class=\"btn btn-danger\" style=\"margin: 10px;\" ms-click=\"@removeInput\">X</button>\n" +-->
-                <!--"                    </div>\n" +-->
-                <!--"                </div>");-->
-
-
+                avalon.scan($("#"+div).get(vm.globleId));
                 vm.globleId = vm.globleId+1;
+
                 },
                 listXpath: "",
                 saleXpath: "",
@@ -196,10 +179,11 @@
     </script>
 
     <script>
-        var m = avalon.define({
-          $id:'app',
-          choices:[],
-          markets:['un-us','en-ua','de-de']
+        var aa = avalon.define({
+          $id:'aa',
+          url: "aaaaa",
+          saleXpath: "xxxxxxxxx",
+          listXpath: "xxdfadf"
         })
     </script>
 </head>
@@ -303,12 +287,12 @@
                         <input ms-duplex="@name" type="text"  class="form-control" style="width: 425px"/>
                         <button type="button" class="btn btn-primary" style="margin: 1px;" ms-click="@request">{{@text}}</button>
                     </div>
-                    <div  id="baseDiv">
+                    <div  id="baseDiv" ms-controller="appendMs">
                         <div>
                             <label>Page&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
                             <input ms-duplex="@url"    type="url" class="form-control"  style="width: 455px"/>
                             <button type="button" class="btn btn-primary" style="margin: 10px;" ms-click="@addInput">+</button>
-                            <button type="button" class="btn btn-danger" style="margin: 10px;" ms-click="@removeInput">X</button>
+                            <!--<button type="button" class="btn btn-danger" style="margin: 10px;" ms-click="@removeInput">X</button>-->
                             <button type="button" class="btn btn-success" style="margin: 1px;" ms-click="@result">{{@resultButton}}</button>
                         </div>
                         <div>
@@ -320,6 +304,7 @@
                             <input ms-duplex="@listXpath"    type="url" class="form-control"  style="width: 750px"/>
                         </div>
                     </div>
+                    <p>{{@url}}</p>
                     <div>
                         <h2 style="color:red" hidden="hidden" id="h3">pfId:{{@pfId}}   market：{{@market}}</h2>
                     </div>
